--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
     "express-sessions": "^1.0.5",
-    "mongodb": "^2.0.46",
+    "mongodb": "^2.0.46", // remove this !!! lol
     "mongoose": "^4.2.2"
   }
 }
