--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
-    "express-sessions": "^1.0.5",
-    "mongoose": "^4.2.2"
+    "mongoose": "^4.2.2",
+    "express-session": "~1.12.0",
+    "passport": "~0.3.0",
+    "passport-local": "~1.0.0"
   }
 }
