--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "mongoose": "^4.2.2",
     "express-session": "~1.12.0",
     "passport": "~0.3.0",
-    "passport-local": "~1.0.0",
-    "passport-local-mongoose": "~3.1.0"
+    "passport-local": "~1.0.0"
   }
 }
